--- a/PillPall/PillPall.csproj
+++ b/PillPall/PillPall.csproj
@@ -33,6 +33,9 @@
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
 	  <CreatePackage>false</CreatePackage>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
@@ -67,11 +70,13 @@
 	  <None Remove="Models\" />
 	  <None Remove="Data\" />
 	  <None Remove="ViewModels\" />
+	  <None Remove="CustomControl\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Views\" />
 	  <Folder Include="Models\" />
 	  <Folder Include="Data\" />
 	  <Folder Include="ViewModels\" />
+	  <Folder Include="CustomControl\" />
 	</ItemGroup>
 </Project>
